--- a/OnubaShop/web/css/estilos.css
+++ b/OnubaShop/web/css/estilos.css
@@ -33,6 +33,7 @@ header{
     align-items: center;
     justify-content: space-between;
     background-color: black;
+    padding: 15px;
 }
 
 .logo{
