--- a/OnubaShop/web/css/estilos.css
+++ b/OnubaShop/web/css/estilos.css
@@ -35,7 +35,6 @@ header{
     background-color: black;
     padding: 15px;
 }
-
 .logo{
     font-size: 35px;
 }
@@ -47,6 +46,72 @@ header{
     padding: 10px 12px;
     color: white;
     border-radius: 5px;
+}
+.navbar a:hover{
+    background: rgba(255, 20, 147,.8);
+}
+#menu-icon{
+    font-size: 30px;
+    z-index: 1000;
+    color: #fff;
+    cursor: pointer;
+    display: none;
+}
+.header-btn a{
+    padding: 10px 20px;
+    color: #fff;
+    font-size: 15px;
+}
+.header-btn .registrarse{
+    background: #c32865;
+    border: 2px solid transparent;
+    border-radius: 5px;
+    transition: all .50s ease;
+}
+.header-btn .registrarse:hover{
+    border: 2px solid #c32865;
+    background: rgba(255, 20, 147,0.5);
+}
+/* configuración en función del tamaño de pantalla */
+@media(max-width: 1530px){
+    header{
+        padding: 18px 3%;
+        transition: .2s;
+    }
+}
+@media(max-width: 1070px){
+    header{
+        padding: 12px 3%;
+        transition: .2s;
+    }
+    #menu-icon{
+        display: block;
+    }
+    .sign-up{
+        display: none;
+    }
+    .navbar{
+        position: absolute;
+        top: -800px;
+        left: 0;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        background: #1b1b1b;
+        transition: all .50s ease;
+        text-align: left;
+    }
+    .navbar a{
+        display: block;
+        padding: 1rem;
+        margin: 0.8rem;        
+    }
+    .navbar.open{
+        top: 100%;
+    }
+    footer{
+        height: 1vh;
+    }
 }
 /* Contenido */ 
 .contenedor-nostros{
